@@ -16,6 +16,8 @@ public:
 
 	virtual void Explosion(const float3& pos, float strength, float radius) = 0;
 	virtual void RecalcArea(int x1, int x2, int y1, int y2) = 0;
+	virtual void TerrainTypeHardnessChanged(int ttIndex) {}
+	virtual void TerrainTypeSpeedModChanged(int ttIndex) {}
 	virtual void Update() {}
 
 	bool disabled;
